# terminal-quotes

./: README.md  pyproject.toml  setup.py
src/terminal_quote_generator/: __init__.py  cli.py
src/terminal_quote_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
