[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-quote-generator"
version = "1.0.0"
description = "A global PowerShell terminal quote generator with local caching."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "colorama>=0.4.6",
]

[project.scripts]
quote-gen = "terminal_quote_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
